--- a/rush.yaml
+++ b/rush.yaml
@@ -85958,7 +85958,7 @@ atk: 1300
 def: 200
 images:
 - index: 1
-  image: AstrobioDrake-RDKP12-JP-OP.png
+  image: AstrobioDrake-RDKP12-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP12-JP026
@@ -86015,7 +86015,7 @@ series:
 - Voidvelgr
 images:
 - index: 1
-  image: VoidvelgrKataphraktos-RDKP12-JP-OP.png
+  image: VoidvelgrKataphraktos-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP008
@@ -86060,7 +86060,7 @@ series:
 - Chemistry
 images:
 - index: 1
-  image: Chromatographicus-RDKP12-JP-OP.png
+  image: Chromatographicus-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP001
@@ -86106,7 +86106,7 @@ series:
 - The
 images:
 - index: 1
-  image: TheDragias-RDKP12-JP-OP.png
+  image: TheDragias-RDKP12-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP12-JP003
@@ -86164,7 +86164,7 @@ series:
 - Cat
 images:
 - index: 1
-  image: CatClawGirl-RDKP12-JP-OP.png
+  image: CatClawGirl-RDKP12-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP12-JP016
@@ -86236,7 +86236,7 @@ series:
 - The
 images:
 - index: 1
-  image: TheDragiastar-RDKP12-JP-OP.png
+  image: TheDragiastar-RDKP12-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP12-JP035
@@ -86305,7 +86305,7 @@ def: 1400
 legend: true
 images:
 - index: 1
-  image: GilfordtheLightning-RDKP12-JP-OP.png
+  image: GilfordtheLightning-RDKP12-JP-RR.png
 sets:
   ja:
   - set_number: RD/KP12-JP000
@@ -86373,7 +86373,7 @@ atk: 2500
 def: 2200
 images:
 - index: 1
-  image: GilfordtheRising-RDKP12-JP-OP.png
+  image: GilfordtheRising-RDKP12-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP12-JP028
@@ -86443,7 +86443,7 @@ materials:
   zh-CN:
 images:
 - index: 1
-  image: DoubleRayDragons-RDKP12-JP-OP.png
+  image: DoubleRayDragons-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP034
@@ -86512,7 +86512,7 @@ series:
 - Cat
 images:
 - index: 1
-  image: StarCatStraynya-RDKP12-JP-OP.png
+  image: StarCatStraynya-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP036
@@ -86581,7 +86581,7 @@ series:
 - Cat
 images:
 - index: 1
-  image: StarCatDestronya-RDKP12-JP-OP.png
+  image: StarCatDestronya-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP037
@@ -86626,7 +86626,7 @@ series:
 - Cat
 images:
 - index: 1
-  image: SilverEyesStarCat-RDKP12-JP-OP.png
+  image: SilverEyesStarCat-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP004
@@ -86671,7 +86671,7 @@ series:
 - Cat
 images:
 - index: 1
-  image: GoldenEyesStarCat-RDKP12-JP-OP.png
+  image: GoldenEyesStarCat-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP005
@@ -86724,7 +86724,7 @@ series:
 - The
 images:
 - index: 1
-  image: TheCopy-RDKP12-JP-OP.png
+  image: TheCopy-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP046
@@ -86775,7 +86775,7 @@ card_type: Spell
 property: Equip
 images:
 - index: 1
-  image: ViceSlasher-RDKP12-JP-OP.png
+  image: ViceSlasher-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP048
@@ -86818,7 +86818,7 @@ atk: 1500
 def: 0
 images:
 - index: 1
-  image: RayDragon-RDKP12-JP-OP.png
+  image: RayDragon-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP002
@@ -86869,7 +86869,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: DragonDoubleDoom-RDKP12-JP-OP.png
+  image: DragonDoubleDoom-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP060
@@ -86924,7 +86924,7 @@ atk: 200
 def: 200
 images:
 - index: 1
-  image: DoubleDoomDragon-RDKP12-JP-OP.png
+  image: DoubleDoomDragon-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP011
@@ -87062,7 +87062,7 @@ series:
 - High Tech Dragon
 images:
 - index: 1
-  image: CrackingClaw-RDKP12-JP-OP.png
+  image: CrackingClaw-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP043
@@ -87115,7 +87115,7 @@ series:
 - Voidvelgr
 images:
 - index: 1
-  image: VoidvelgrPhalanx-RDKP12-JP-OP.png
+  image: VoidvelgrPhalanx-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP044
@@ -87168,7 +87168,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: SkysaviorWitnesses-RDKP12-JP-OP.png
+  image: SkysaviorWitnesses-RDKP12-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP12-JP053
@@ -87237,7 +87237,7 @@ series:
 - Transamu
 images:
 - index: 1
-  image: TransamuroadRainac-RDKP12-JP-OP.png
+  image: TransamuroadRainac-RDKP12-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP12-JP030
@@ -87289,7 +87289,7 @@ card_type: Spell
 property: Equip
 images:
 - index: 1
-  image: RoadArmsSwordBreaker-RDKP12-JP-OP.png
+  image: RoadArmsSwordBreaker-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP045
@@ -87343,7 +87343,7 @@ series:
 - The
 images:
 - index: 1
-  image: BackToTheFusion-RDKP12-JP-OP.png
+  image: BackToTheFusion-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP047
@@ -87394,7 +87394,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: EtherEscape-RDKP12-JP-OP.png
+  image: EtherEscape-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP062
@@ -87445,7 +87445,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: Stemagic-RDKP12-JP-OP.png
+  image: Stemagic-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP042
@@ -87496,7 +87496,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: PhantomRoar-RDKP12-JP-OP.png
+  image: PhantomRoar-RDKP12-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP12-JP065
@@ -87551,7 +87551,7 @@ atk: 300
 def: 700
 images:
 - index: 1
-  image: EngineReviver-RDKP12-JP-OP.png
+  image: EngineReviver-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP027
@@ -87618,7 +87618,7 @@ atk: 2600
 def: 2000
 images:
 - index: 1
-  image: GilfordtheLegend-RDKP12-JP-OP.png
+  image: GilfordtheLegend-RDKP12-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP12-JP029
@@ -87671,7 +87671,7 @@ series:
 - Three Rulers
 images:
 - index: 1
-  image: RisingLunaRadiantLuster-RDKP12-JP-OP.png
+  image: RisingLunaRadiantLuster-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP050
@@ -87728,7 +87728,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: SoleiltheSkysaviorAngel-RDKP12-JP-OP.png
+  image: SoleiltheSkysaviorAngel-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP020
@@ -87785,7 +87785,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: LuatheSkysaviorAngel-RDKP12-JP-OP.png
+  image: LuatheSkysaviorAngel-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP021
@@ -87842,7 +87842,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: DunkestheSkysaviorKnight-RDKP12-JP-OP.png
+  image: DunkestheSkysaviorKnight-RDKP12-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP12-JP025
@@ -87915,7 +87915,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: DigracetheSkysaviorRadiance-RDKP12-JP-OP.png
+  image: DigracetheSkysaviorRadiance-RDKP12-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP12-JP040
@@ -87986,7 +87986,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: DrukmoortheSkysaviorPhantom-RDKP12-JP-OP.png
+  image: DrukmoortheSkysaviorPhantom-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP041
@@ -88041,7 +88041,7 @@ atk: 500
 def: 1200
 images:
 - index: 1
-  image: CyberCoatl-RDKP12-JP-OP.png
+  image: CyberCoatl-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP018
@@ -88167,7 +88167,7 @@ series:
 - Chemistry
 images:
 - index: 1
-  image: MeleltheBeautifulFlameSpiritoftheLamp-RDKP12-JP-OP.png
+  image: MeleltheBeautifulFlameSpiritoftheLamp-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP031
@@ -88236,7 +88236,7 @@ series:
 - Chemistry
 images:
 - index: 1
-  image: AlchemicalizeSalamandra-RDKP12-JP-OP.png
+  image: AlchemicalizeSalamandra-RDKP12-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP12-JP032
@@ -88289,7 +88289,7 @@ series:
 - Transamu
 images:
 - index: 1
-  image: TransamuLightning-RDKP12-JP-OP.png
+  image: TransamuLightning-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP056
@@ -88342,7 +88342,7 @@ series:
 - Jointech
 images:
 - index: 1
-  image: JointechGreatWall-RDKP12-JP-OP.png
+  image: JointechGreatWall-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP057
@@ -88393,7 +88393,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: TributeBlock-RDKP12-JP-OP.png
+  image: TributeBlock-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP058
@@ -88444,7 +88444,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: TraditionalTax-RDKP12-JP-OP.png
+  image: TraditionalTax-RDKP12-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP12-JP063
@@ -88501,7 +88501,7 @@ series:
 - Cat
 images:
 - index: 1
-  image: GreenEyesStarCat-RDKP12-JP-OP.png
+  image: GreenEyesStarCat-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP015
@@ -88558,7 +88558,7 @@ series:
 - Cat
 images:
 - index: 1
-  image: PurpleEyesStarCat-RDKP12-JP-OP.png
+  image: PurpleEyesStarCat-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP014
@@ -88615,7 +88615,7 @@ series:
 - Cat
 images:
 - index: 1
-  image: DarkEyesBreakstarCat-RDKP12-JP-OP.png
+  image: DarkEyesBreakstarCat-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP017
@@ -88666,7 +88666,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: MeowonderfulRush-RDKP12-JP-OP.png
+  image: MeowonderfulRush-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP049
@@ -88725,7 +88725,7 @@ series:
 - Shaman Bandit
 images:
 - index: 1
-  image: MachviooftheUltimateAria-RDKP12-JP-OP.png
+  image: MachviooftheUltimateAria-RDKP12-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP12-JP010
@@ -88776,7 +88776,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: StrayForce-RDKP12-JP-OP.png
+  image: StrayForce-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP061
@@ -88833,7 +88833,7 @@ series:
 - Jointech
 images:
 - index: 1
-  image: JointechTinplatesaurus-RDKP12-JP-OP.png
+  image: JointechTinplatesaurus-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP006
@@ -88886,7 +88886,7 @@ series:
 - Blaze Fiend
 images:
 - index: 1
-  image: BlazeFiendAssault-RDKP12-JP-OP.png
+  image: BlazeFiendAssault-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP051
@@ -88943,7 +88943,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: RangatheSkysaviorKnight-RDKP12-JP-OP.png
+  image: RangatheSkysaviorKnight-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP022
@@ -89000,7 +89000,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: SeirtheSkysaviorKnight-RDKP12-JP-OP.png
+  image: SeirtheSkysaviorKnight-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP023
@@ -89057,7 +89057,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: CielatheSkysaviorKnight-RDKP12-JP-OP.png
+  image: CielatheSkysaviorKnight-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP024
@@ -89129,7 +89129,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: SolciertheSkysaviorLightflash-RDKP12-JP-OP.png
+  image: SolciertheSkysaviorLightflash-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP038
@@ -89200,7 +89200,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: AltierratheSkysaviorTransience-RDKP12-JP-OP.png
+  image: AltierratheSkysaviorTransience-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP039
@@ -89253,7 +89253,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: SkysaviorPrayer-RDKP12-JP-OP.png
+  image: SkysaviorPrayer-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP052
@@ -89306,7 +89306,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: SkysaviorSymbol-RDKP12-JP-OP.png
+  image: SkysaviorSymbol-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP054
@@ -89363,7 +89363,7 @@ series:
 - The
 images:
 - index: 1
-  image: TheClone-RDKP12-JP-OP.png
+  image: TheClone-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP012
@@ -89418,7 +89418,7 @@ atk: 1600
 def: 800
 images:
 - index: 1
-  image: MirroringWyvern-RDKP12-JP-OP.png
+  image: MirroringWyvern-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP013
@@ -89475,7 +89475,7 @@ series:
 - Voidvelgr
 images:
 - index: 1
-  image: VoidvelgrBlackDwarf-RDKP12-JP-OP.png
+  image: VoidvelgrBlackDwarf-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP009
@@ -89631,7 +89631,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: DarkNebula-RDKP12-JP-OP.png
+  image: DarkNebula-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP059
@@ -89700,7 +89700,7 @@ series:
 - Voidvelgr
 images:
 - index: 1
-  image: VoidvelgrProtostar-RDKP12-JP-OP.png
+  image: VoidvelgrProtostar-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP033
@@ -89757,7 +89757,7 @@ series:
 - Chemistry
 images:
 - index: 1
-  image: RedRiser-RDKP12-JP-OP.png
+  image: RedRiser-RDKP12-JP-C.png
 sets:
   ja:
   - set_number: RD/KP12-JP007
@@ -89808,7 +89808,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: BufferedSlime-RDKP12-JP-OP.png
+  image: BufferedSlime-RDKP12-JP-R.png
 sets:
   ja:
   - set_number: RD/KP12-JP064
@@ -89877,7 +89877,7 @@ series:
 - Excutie
 images:
 - index: 1
-  image: ExcutieFlame-RDKP12-JP-OP.png
+  image: ExcutieFlame-RDKP12-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP12-JP019
@@ -89928,7 +89928,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: RingofStorms-RDKP12-JP-OP.png
+  image: RingofStorms-RDKP12-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP12-JP055
