--- a/data/rush/17010.yaml
+++ b/data/rush/17010.yaml
@@ -1,6 +1,6 @@
 konami_id: 17010
 name:
-  en: Unbelievarmor
+  en: Bizarrmor
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: Unbelievarmor-RDKP07-JP-R.png
+  image: Bizarrmor-RDKP07-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP044
