--- a/data/rush/17014.yaml
+++ b/data/rush/17014.yaml
@@ -1,6 +1,6 @@
 konami_id: 17014
 name:
-  en: Tile Burn
+  en: Hot Off the Press
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Newspaper
 images:
 - index: 1
-  image: TileBurn-RDKP07-JP-R.png
+  image: HotOffthePress-RDKP07-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP048
