--- a/rush.yaml
+++ b/rush.yaml
@@ -49239,7 +49239,7 @@ yugipedia_page_id: 834787
 ---
 konami_id: 17010
 name:
-  en: Unbelievarmor
+  en: Bizarrmor
   de:
   es:
   fr:
@@ -49283,7 +49283,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: Unbelievarmor-RDKP07-JP-R.png
+  image: Bizarrmor-RDKP07-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP044
@@ -49481,7 +49481,7 @@ yugipedia_page_id: 829594
 ---
 konami_id: 17014
 name:
-  en: Tile Burn
+  en: Hot Off the Press
   de:
   es:
   fr:
@@ -49527,7 +49527,7 @@ series:
 - Newspaper
 images:
 - index: 1
-  image: TileBurn-RDKP07-JP-R.png
+  image: HotOffthePress-RDKP07-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP048
