--- a/rush.yaml
+++ b/rush.yaml
@@ -90078,3 +90078,127 @@ sets:
     rarities:
     - Rare
 yugipedia_page_id: 930467
+---
+konami_id:
+name:
+  en: Witness of Dragon Destroyer
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>竜<rt>りゅう</rt></ruby><ruby>破<rt>は</rt></ruby><ruby>壊<rt>かい</rt></ruby>の<ruby>証<rt>しょう</rt></ruby><ruby>人<rt>にん</rt></ruby>
+  ja_romaji: Ryūhakai no Shōnin
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 2 cards of your Deck to the Graveyard. Then, you can add 1 "Buster Blader" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: LIGHT
+level: 3
+atk: 900
+def: 1200
+images:
+- index: 1
+  image: WitnessofDragonDestroyer-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP037
+    set_name: Legend Awakening Pack
+    rarities:
+    - Common
+yugipedia_page_id: 930745
+---
+konami_id:
+name:
+  en: Legendary Swordsman - Buster Blader
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>伝<rt>でん</rt></ruby><ruby>説<rt>せつ</rt></ruby>の<ruby>戦<rt>せん</rt></ruby><ruby>士<rt>し</rt></ruby>－バスター・ブレイダー
+  ja_romaji: Densetsu no Senshi - Basutā Bureidā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    This card's name becomes "Buster Blader" while in the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This card cannot attack directly. This card gains ATK equal to [the number of face-up Dragon Type monsters on your opponent's field] x 500.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: EARTH
+level: 8
+atk: 2600
+def: 2300
+images:
+- index: 1
+  image: LegendarySwordsmanBusterBlader-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP007
+    set_name: Legend Awakening Pack
+    rarities:
+    - Super Rare
+yugipedia_page_id: 930747
