--- a/data/cards/95440946.yaml
+++ b/data/cards/95440946.yaml
@@ -47,6 +47,7 @@ images:
   illustration: EldlichtheGoldenLord-MADU-EN-VG-artwork.png
 - index: 2
   image: EldlichtheGoldenLord-MGED-EN-PGR-1E.png
+  illustration: EldlichtheGoldenLord-OW-2.png
 sets:
   en:
   - set_number: SESL-EN027
