--- a/rush.yaml
+++ b/rush.yaml
@@ -88478,7 +88478,7 @@ name:
   it:
   pt:
   ja: ロードアームズ－ソードブレイカー
-  ja_romaji: Rōdo Āmuzu - Sōdo Bureikā
+  ja_romaji: Rōdo Āmuzu - Sōdobureikā
   ko:
   ko_rr:
   zh-TW:
