--- a/data/rush/16983.yaml
+++ b/data/rush/16983.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: Yu-Gi-Oh! SEVENS Duel-5 Blu-ray & DVD promotional card
     rarities:
     - Ultra Parallel Rare
+  - set_number: RD/S224-JP003
+    set_name: Secret Ace Pack 2022 Vol.4
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP07-KR017
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
