--- a/data/rush/17873.yaml
+++ b/data/rush/17873.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: Yu-Gi-Oh! GO RUSH!! x 7-Eleven Collaboration Campaign
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/S224-JP002
+    set_name: Secret Ace Pack 2022 Vol.4
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP10-KR025
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
