--- a/data/rush/17309.yaml
+++ b/data/rush/17309.yaml
@@ -75,6 +75,10 @@ sets:
     rarities:
     - Ultra Rare
     - Rush Rare
+  - set_number: RD/S224-JP005
+    set_name: Secret Ace Pack 2022 Vol.4
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP08-KR033
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
