--- a/data/rush/17488.yaml
+++ b/data/rush/17488.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Over Rush Rare
+  - set_number: RD/S224-JP001
+    set_name: Secret Ace Pack 2022 Vol.4
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP09-KR002
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
