--- a/rush.yaml
+++ b/rush.yaml
@@ -1088,7 +1088,7 @@ images:
 - index: 2
   image: MultistrikeDragonDragias-RDAKG2-JP-UR.png
 - index: 3
-  image: MultistrikeDragonDragias-RDKP12-JP-OP.png
+  image: MultistrikeDragonDragias-RDKP12-JP-ORR.png
 sets:
   ja:
   - set_number: RD/ST02-JP001
@@ -5921,7 +5921,7 @@ images:
   image: RedEyesBlackDragon-RDVJMP-JP-RR.png
   illustration: RedEyesBlackDragon-DBR-JP-VG-artwork.png
 - index: 2
-  image: RedEyesBlackDragon-RDGRP1-JP-ScR.png
+  image: RedEyesBlackDragon-RDG002-JP-ORR.png
   illustration: RedEyesBlackDragon-RDGRP1-JP-OP.png
 sets:
   ja:
@@ -47391,6 +47391,10 @@ sets:
     set_name: Yu-Gi-Oh! SEVENS Duel-5 Blu-ray & DVD promotional card
     rarities:
     - Ultra Parallel Rare
+  - set_number: RD/S224-JP003
+    set_name: Secret Ace Pack 2022 Vol.4
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP07-KR017
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
@@ -48713,6 +48717,10 @@ sets:
     rarities:
     - Ultra Rare
     - Rush Rare
+  - set_number: RD/S224-JP004
+    set_name: Secret Ace Pack 2022 Vol.4
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP07-KR036
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
@@ -55299,6 +55307,10 @@ sets:
     rarities:
     - Ultra Rare
     - Rush Rare
+  - set_number: RD/S224-JP005
+    set_name: Secret Ace Pack 2022 Vol.4
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP08-KR033
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
@@ -58060,6 +58072,10 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Over Rush Rare
+  - set_number: RD/S224-JP001
+    set_name: Secret Ace Pack 2022 Vol.4
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP09-KR002
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
@@ -70602,6 +70618,10 @@ sets:
     set_name: Yu-Gi-Oh! GO RUSH!! x 7-Eleven Collaboration Campaign
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/S224-JP002
+    set_name: Secret Ace Pack 2022 Vol.4
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP10-KR025
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
@@ -85293,7 +85313,7 @@ summoning_condition:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase that you Normal or Special Summoned this card, place 1 card from your hand on top of the Deck.
+    During your Main Phase this card was Normal or Special Summoned, place 1 card from your hand on top of the Deck.
   de:
   es:
   fr:
