--- a/data/cards/34447918.yaml
+++ b/data/cards/34447918.yaml
@@ -1,13 +1,13 @@
 konami_id: 18203
 password: 34447918
 name:
-  en: Kashtira Papiyas
+  en: Kashtiratheosis
   de:
   es:
   fr:
   it:
   pt:
-  ja: <ruby>六世壊他化自在天<rt>クシャトリラ・パーピャス</rt></ruby>
+  ja: <ruby>六世壊他化自在天<rt>クシャトリラ・パーピヤス</rt></ruby>
   ja_romaji: Kushatorira Pāpyasu
   ko: 크샤트리라 파피야스
   ko_rr: Keusyateurira Papiyaseu
@@ -15,7 +15,7 @@ name:
   zh-CN: 六世坏他化自在天
 text:
   en: |-
-    Target 1 "Kashtira" monster you control; Special Summon 1 "Kashtira" monster with a different Attribute from your Deck in Defense Position, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Xyz Monsters. If this card becomes banished: You can target 1 of your banished "Kashtira" cards, except "Kashtira Papiyas"; add it to your hand. You can only use each effect of "Kashtira Papiyas" once per turn.
+    Target 1 "Kashtira" monster you control; Special Summon 1 "Kashtira" monster with a different Attribute from your Deck in Defense Position, also for the rest of this turn after this card resolves, you cannot Special Summon monsters from the Extra Deck, except Xyz Monsters. If this card is banished: You can target 1 of your banished "Kashtira" cards, except "Kashtiratheosis"; add it to your hand. You can only use each effect of "Kashtiratheosis" once per turn.
   de:
   es:
   fr:
@@ -36,10 +36,40 @@ series:
 - Kashtira
 images:
 - index: 1
-  image: KashtiraPapiyas-PHHY-JP-C.png
+  image: Kashtiratheosis-PHHY-JP-C.png
 sets:
+  en:
+  - set_number: PHHY-EN058
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: PHHY-DE058
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: PHHY-FR058
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: PHHY-IT058
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: PHHY-PT058
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
   ja:
   - set_number: PHHY-JP058
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  ko:
+  - set_number: PHHY-KR058
     set_name: Photon Hypernova
     rarities:
     - Common
