--- a/data/cards/71832012.yaml
+++ b/data/cards/71832012.yaml
@@ -1,7 +1,7 @@
 konami_id: 18204
 password: 71832012
 name:
-  en: Prime Planet Paraisos
+  en: Pressured Planet Wraitsoth
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 六世坏-天魔世界
 text:
   en: |-
-    When this card is activated: You can add 1 "Kashtira" monster from your Deck to your hand. Monsters you control gain 100 ATK/DEF for each different Attribute among the monsters on the field. If "Kashtira Shangri-Ira" you control activates its effect (except during the Damage Step): You can target 1 card on the field; destroy it. You can only use this effect of "Prime Planet Paraisos" once per turn. You can only activate 1 "Prime Planet Paraisos" per turn.
+    When this card is activated: You can add 1 "Kashtira" monster from your Deck to your hand. Monsters you control gain 100 ATK/DEF for each different Attribute on the field. If a "Kashtira Shangri-Ira" you control activates an effect (except during the Damage Step): You can target 1 card on the field; destroy it. You can only use this effect of "Pressured Planet Wraitsoth" once per turn. You can only activate 1 "Pressured Planet Wraitsoth" per turn.
   de:
   es:
   fr:
@@ -37,10 +37,40 @@ series:
 - World Destruction
 images:
 - index: 1
-  image: PrimePlanetParaisos-PHHY-JP-R.png
+  image: PressuredPlanetWraitsoth-PHHY-JP-R.png
 sets:
+  en:
+  - set_number: PHHY-EN059
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: PHHY-DE059
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: PHHY-FR059
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: PHHY-IT059
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: PHHY-PT059
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
   ja:
   - set_number: PHHY-JP059
+    set_name: Photon Hypernova
+    rarities:
+    - Rare
+  ko:
+  - set_number: PHHY-KR059
     set_name: Photon Hypernova
     rarities:
     - Rare
