--- a/data/cards/78534861.yaml
+++ b/data/cards/78534861.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 恐吓爪牙族型俱舍怒威族
 text:
   en: |-
-    During the Main Phase (Quick Effect): You can Special Summon this card from your hand, and if you do, banish 1 "Kashtira" or "Scareclaw" card from your hand or GY. You can only use this effect of "Scareclaw Kashtira" once per turn. This card can attack while in face-up Defense Position. If it does, apply its DEF for damage calculation. The effects of any opponent's monster that was involved in a battle with your "Kashtira" or "Scareclaw" monster this turn, while this card was face-up on the field, are negated.
+    During the Main Phase (Quick Effect): You can Special Summon this card from your hand, and if you do, banish 1 "Kashtira" or "Scareclaw" card from your hand or GY. You can only use this effect of "Scareclaw Kashtira" once per turn. This card can attack while in face-up Defense Position. If it does, apply its DEF for damage calculation. If your "Kashtira" or "Scareclaw" monster battles an opponent's monster, that opponent's monster's effects are negated until the end of this turn.
   de:
   es:
   fr:
@@ -44,8 +44,33 @@ images:
 - index: 1
   image: ScareclawKashtira-PHHY-JP-C.png
 sets:
+  en:
+  - set_number: PHHY-EN007
+    set_name: Photon Hypernova
+    rarities:
+  de:
+  - set_number: PHHY-DE007
+    set_name: Photon Hypernova
+    rarities:
+  fr:
+  - set_number: PHHY-FR007
+    set_name: Photon Hypernova
+    rarities:
+  it:
+  - set_number: PHHY-IT007
+    set_name: Photon Hypernova
+    rarities:
+  pt:
+  - set_number: PHHY-PT007
+    set_name: Photon Hypernova
+    rarities:
   ja:
   - set_number: PHHY-JP007
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  ko:
+  - set_number: PHHY-KR007
     set_name: Photon Hypernova
     rarities:
     - Common
