--- a/data/cards/04928565.yaml
+++ b/data/cards/04928565.yaml
@@ -44,8 +44,38 @@ images:
 - index: 1
   image: TearlamentsKashtira-PHHY-JP-C.png
 sets:
+  en:
+  - set_number: PHHY-EN008
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: PHHY-DE008
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: PHHY-FR008
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: PHHY-IT008
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: PHHY-PT008
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PHHY-JP008
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  ko:
+  - set_number: PHHY-KR008
     set_name: Photon Hypernova
     rarities:
     - Common
