--- a/data/cards/08953369.yaml
+++ b/data/cards/08953369.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 俱舍怒威族的重合
 text:
   en: |-
-    Target 1 monster on the field; banish 1 monster with 1500 ATK/2100 DEF from your hand, GY, or that is face-up on either field, and if you do, the targeted monster gains 1500 ATK. If this card becomes banished and you control a "Kashtira" monster: You can target 1 Effect Monster your opponent controls; negate its effects until the end of this turn. You can only use each effect of "Kashtira Overlap" once per turn.
+    Target 1 monster on the field; banish 1 monster with 1500 ATK/2100 DEF from your hand, your GY, or face-up on either field, and if you do, the targeted monster gains 1500 ATK. If this card is banished and you control a "Kashtira" monster: You can target 1 Effect Monster your opponent controls; negate its effects until the end of this turn. You can only use each effect of "Kashtira Overlap" once per turn.
   de:
   es:
   fr:
@@ -38,8 +38,33 @@ images:
 - index: 1
   image: KashtiraOverlap-PHHY-JP-C.png
 sets:
+  en:
+  - set_number: PHHY-EN057
+    set_name: Photon Hypernova
+    rarities:
+  de:
+  - set_number: PHHY-DE057
+    set_name: Photon Hypernova
+    rarities:
+  fr:
+  - set_number: PHHY-FR057
+    set_name: Photon Hypernova
+    rarities:
+  it:
+  - set_number: PHHY-IT057
+    set_name: Photon Hypernova
+    rarities:
+  pt:
+  - set_number: PHHY-PT057
+    set_name: Photon Hypernova
+    rarities:
   ja:
   - set_number: PHHY-JP057
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  ko:
+  - set_number: PHHY-KR057
     set_name: Photon Hypernova
     rarities:
     - Common
