--- a/data/cards/31149212.yaml
+++ b/data/cards/31149212.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 俱舍怒威族·莱斯哈特
 text:
   en: |-
-    If you control a "Kashtira" monster: You can Special Summon this card from your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Xyz Monsters. During your Main Phase, if this card was Normal or Special Summoned this turn: You can banish 1 "Kashtira" card from your Deck, except "Kashtira Riseheart"; banish the top 3 cards of your opponent's Deck, face-down, and if you do, this card's Level becomes 7. You can only use each effect of "Kashtira Riseheart" once per turn.
+    If you control a "Kashtira" monster: You can Special Summon this card from your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Xyz Monsters. During your Main Phase, if this card was Normal or Special Summoned this turn: You can banish 1 "Kashtira" card from your Deck, except "Kashtira Riseheart"; banish the top 3 cards of your opponent's Deck face-down, and if you banish any, this card's Level becomes 7. You can only use each effect of "Kashtira Riseheart" once per turn.
   de:
   es:
   fr:
@@ -43,6 +43,31 @@ images:
 - index: 1
   image: KashtiraRiseheart-PHHY-JP-SR.png
 sets:
+  en:
+  - set_number: PHHY-EN006
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: PHHY-DE006
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: PHHY-FR006
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: PHHY-IT006
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: PHHY-PT006
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PHHY-JP006
     set_name: Photon Hypernova
@@ -51,6 +76,18 @@ sets:
     - Secret Rare
     - Prismatic Secret Rare
   - set_number: PHHY-JP006
+    set_name: Photon Hypernova +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Prismatic Secret Rare
+  ko:
+  - set_number: PHHY-KR006
+    set_name: Photon Hypernova
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Prismatic Secret Rare
+  - set_number: PHHY-KR006
     set_name: Photon Hypernova +1 Bonus Pack
     rarities:
     - Super Rare
