--- a/data/cards/33925864.yaml
+++ b/data/cards/33925864.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 六世坏根清净
 text:
   en: |-
-    If a "Kashtira" Xyz Monster is on the field: Make both players banish monsters from their field face-down so they control only 1. If this card becomes banished: You can target 1 "Kashtira" Xyz Monster you control; add 1 "Kashtira" monster you own attached to it to your hand, then you can Special Summon it from your hand. You can only use each effect of "Kashtira Big Bang" once per turn.
+    If a "Kashtira" Xyz Monster is on the field and a player controls 2 or more monsters: They must banish monsters they control, face-down, so they only control 1 monster. If this card is banished: You can target 1 "Kashtira" Xyz Monster you control; add 1 of your "Kashtira" monsters attached to it to your hand, then you can Special Summon that monster from your hand. You can only use each effect of "Kashtira Big Bang" once per turn.
   de:
   es:
   fr:
@@ -38,8 +38,33 @@ images:
 - index: 1
   image: KashtiraBigBang-PHHY-JP-C.png
 sets:
+  en:
+  - set_number: PHHY-EN075
+    set_name: Photon Hypernova
+    rarities:
+  de:
+  - set_number: PHHY-DE075
+    set_name: Photon Hypernova
+    rarities:
+  fr:
+  - set_number: PHHY-FR075
+    set_name: Photon Hypernova
+    rarities:
+  it:
+  - set_number: PHHY-IT075
+    set_name: Photon Hypernova
+    rarities:
+  pt:
+  - set_number: PHHY-PT075
+    set_name: Photon Hypernova
+    rarities:
   ja:
   - set_number: PHHY-JP075
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  ko:
+  - set_number: PHHY-KR075
     set_name: Photon Hypernova
     rarities:
     - Common
