--- a/data/cards/48626373.yaml
+++ b/data/cards/48626373.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     3 Level 7 monsters
-    Once per turn, if "Kashtira Shangri-Ira" activated its effect(s) this turn, you can also Xyz Summon "Kashtira Arise-Heart" by using a "Kashtira" monster you control. (Transfer its materials to this card.) Any card sent to the GY is banished instead. Once per Chain, each time a card(s) is banished: Attach 1 banished card to this card as material. Once per turn (Quick Effect): You can detach 3 materials from this card, then target 1 card on the field; banish it face-down.
+    Once per turn, you can also Xyz Summon "Kashtira Arise-Heart" by using 1 "Kashtira" monster you control, if an effect of "Kashtira Shangri-Ira" was successfully activated this turn. (Transfer its materials to this card.) Any card sent to the GY is banished instead. Once per Chain, each time a card(s) is banished: Attach 1 banished card to this card as material. Once per turn (Quick Effect): You can detach 3 materials from this card, then target 1 card on the field; banish it face-down.
   de:
   es:
   fr:
@@ -48,6 +48,31 @@ images:
 - index: 1
   image: KashtiraAriseHeart-PHHY-JP-UR.png
 sets:
+  en:
+  - set_number: PHHY-EN046
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: PHHY-DE046
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: PHHY-FR046
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: PHHY-IT046
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: PHHY-PT046
+    set_name: Photon Hypernova
+    rarities:
+    - Secret Rare
   ja:
   - set_number: PHHY-JP046
     set_name: Photon Hypernova
@@ -57,6 +82,19 @@ sets:
     - Secret Rare
     - Prismatic Secret Rare
   - set_number: PHHY-JP046
+    set_name: Photon Hypernova +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Prismatic Secret Rare
+  ko:
+  - set_number: PHHY-KR046
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Prismatic Secret Rare
+  - set_number: PHHY-KR046
     set_name: Photon Hypernova +1 Bonus Pack
     rarities:
     - Ultra Rare
