--- a/data/cards/24224830.yaml
+++ b/data/cards/24224830.yaml
@@ -192,6 +192,15 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: RC04-JP058
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: FLOD-KR065
     set_name: Flames of Destruction
