--- a/data/cards/68075840.yaml
+++ b/data/cards/68075840.yaml
@@ -16,9 +16,9 @@ name:
 text:
   en: |-
     The three navigators of the Powerful Pro world.
-    (Left) Po-chan is cheerful, energetic and responsible, but the fly in the ointment is she's forgetful.
-    (Right) Wer-chan is gentle, serious and calm, but sometimes loses her temper.
-    (Center) In the middle is Namiki, the girls' big-time senpai, whose trademark feature is her bag, and her beloved dog, Chikuwa.
+    (Left) Po-chan is cheerful, energetic, and responsible, but the fly in the ointment is she's forgetful.
+    (Right) Wer-chan is gentle, serious, and calm, but sometimes loses her temper.
+    (Center) In the middle is Namiki, the girls' big-time senpai, whose trademark features are her bag and her beloved dog, Chikuwa.
     The girls lead the players to the stadium, where they'll finally face their destiny. And once there, the players take a big step forward.
     — This is the beginning of everything; the great history of baseball.''
   de:
