--- a/data/cards/38356857.yaml
+++ b/data/cards/38356857.yaml
@@ -1,7 +1,7 @@
 konami_id: 18163
 password: 38356857
 name:
-  en: Gishki Grim
+  en: Gishki Grimness
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 冷酷遗式术师
 text:
   en: |-
-    If you Ritual Summon exactly 1 WATER Ritual Monster with a card effect that requires use of monsters, this card can be used as the entire requirement. If this card is Normal or Special Summoned: You can Special Summon 1 "Gishki" monster from your Deck, except "Gishki Grim", also you cannot declare attacks for the rest of this turn, except with Ritual Monsters. You can only use this effect of "Gishki Grim" once per turn.
+    If you Ritual Summon exactly 1 WATER Ritual Monster with a card effect that requires use of monsters, this card can be used as the entire Tribute. If this card is Normal or Special Summoned: You can Special Summon 1 "Gishki" monster from your Deck, except "Gishki Grimness", also you can only declare attacks with Ritual Monsters until the end of this turn. You can only use this effect of "Gishki Grimness" once per turn.
   de:
   es:
   fr:
@@ -40,10 +40,35 @@ series:
 - Gishki
 images:
 - index: 1
-  image: GishkiGrim-PHHY-JP-C.png
+  image: GishkiGrimness-PHHY-JP-C.png
 sets:
+  en:
+  - set_number: PHHY-EN018
+    set_name: Photon Hypernova
+    rarities:
+  de:
+  - set_number: PHHY-DE018
+    set_name: Photon Hypernova
+    rarities:
+  fr:
+  - set_number: PHHY-FR018
+    set_name: Photon Hypernova
+    rarities:
+  it:
+  - set_number: PHHY-IT018
+    set_name: Photon Hypernova
+    rarities:
+  pt:
+  - set_number: PHHY-PT018
+    set_name: Photon Hypernova
+    rarities:
   ja:
   - set_number: PHHY-JP018
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  ko:
+  - set_number: PHHY-KR018
     set_name: Photon Hypernova
     rarities:
     - Common
