--- a/data/cards/51409648.yaml
+++ b/data/cards/51409648.yaml
@@ -1,7 +1,7 @@
 konami_id: 18179
 password: 51409648
 name:
-  en: Lindwurm the Hammer Dragon
+  en: Rindbrumm the Striking Dragon
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     "Fallen of Albaz" + 1 Beast, Beast-Warrior, or Winged Beast monster
-    When a Fusion, Synchro, Xyz, or Link Monster's effect is activated (Quick Effect): You can negate that effect, then you can return 1 monster on the field to the hand. During your opponent's turn, if this card is in your GY (Quick Effect): You can target 1 "Fallen of Albaz" in your GY; if both are still in your GY, Special Summon either that monster or this card, and if you do, banish the other. You can only use each effect of "Lindwurm the Hammer Dragon" once per turn.
+    When a Fusion, Synchro, Xyz, or Link Monster's effect is activated (Quick Effect): You can negate that effect, then you can return 1 monster from the field to the hand. During your opponent's turn, while this card is in your GY (Quick Effect): You can target 1 "Fallen of Albaz" in your GY; Special Summon either that monster or this card, and banish the other. You can only use each effect of "Rindbrumm the Striking Dragon" once per turn.
   de:
   es:
   fr:
@@ -45,8 +45,33 @@ series:
 - Albaz Dragon
 images:
 - index: 1
-  image: LindwurmtheHammerDragon-PHHY-JP-SR.png
+  image: RindbrummtheStrikingDragon-PHHY-JP-SR.png
 sets:
+  en:
+  - set_number: PHHY-EN034
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: PHHY-DE034
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: PHHY-FR034
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: PHHY-IT034
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: PHHY-PT034
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PHHY-JP034
     set_name: Photon Hypernova
@@ -55,6 +80,18 @@ sets:
     - Secret Rare
     - Prismatic Secret Rare
   - set_number: PHHY-JP034
+    set_name: Photon Hypernova +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Prismatic Secret Rare
+  ko:
+  - set_number: PHHY-KR034
+    set_name: Photon Hypernova
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Prismatic Secret Rare
+  - set_number: PHHY-KR034
     set_name: Photon Hypernova +1 Bonus Pack
     rarities:
     - Super Rare
