--- a/data/cards/74615388.yaml
+++ b/data/cards/74615388.yaml
@@ -1,7 +1,7 @@
 konami_id: 18192
 password: 74615388
 name:
-  en: Laevateinn, Generaider Boss of Shadows
+  en: Laevatein, Generaider Boss of Shadows
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ Level 9 monsters
-    You can only control 1 "Laevateinn, Generaider Boss of Shadows". All monsters your opponent controls lose 1000 ATK/DEF. (Quick Effect): You can Tribute this Xyz Summoned card; Special Summon 1 non-Fairy "Generaider" Xyz Monster from your Extra Deck, then you can attach cards from the field and/or any GY(s) to it as material, up to the number of materials this card had.
+    You can only control 1 "Laevatein, Generaider Boss of Shadows". Monsters your opponent controls lose 1000 ATK/DEF. (Quick Effect): You can Tribute this Xyz Summoned card; Special Summon 1 non-Fairy "Generaider" Xyz Monster from your Extra Deck, then you can attach cards from any field and/or GYs to that Special Summoned monster as material, up to the number of materials this card had.
   de:
   es:
   fr:
@@ -45,8 +45,33 @@ series:
 - Generaider
 images:
 - index: 1
-  image: LaevateinnGeneraiderBossofShadows-PHHY-JP-SR.png
+  image: LaevateinGeneraiderBossofShadows-PHHY-JP-SR.png
 sets:
+  en:
+  - set_number: PHHY-EN047
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: PHHY-DE047
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: PHHY-FR047
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: PHHY-IT047
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: PHHY-PT047
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PHHY-JP047
     set_name: Photon Hypernova
@@ -55,6 +80,18 @@ sets:
     - Secret Rare
     - Prismatic Secret Rare
   - set_number: PHHY-JP047
+    set_name: Photon Hypernova +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Prismatic Secret Rare
+  ko:
+  - set_number: PHHY-KR047
+    set_name: Photon Hypernova
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Prismatic Secret Rare
+  - set_number: PHHY-KR047
     set_name: Photon Hypernova +1 Bonus Pack
     rarities:
     - Super Rare
