--- a/data/cards/88926295.yaml
+++ b/data/cards/88926295.yaml
@@ -1,7 +1,7 @@
 konami_id: 18177
 password: 88926295
 name:
-  en: Evigishki Nereimanas
+  en: Evigishki Neremanas
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 邪遗式心意海仙女
 text:
   en: |-
-    You can Ritual Summon this card with any "Gishki" Ritual Spell. If this card is Ritual Summoned: You can target 1 WATER monster in your GY; Special Summon it. Cannot be destroyed by battle with a monster Special Summoned from the Extra Deck. Once per turn, when your opponent activates a monster effect (Quick Effect): You can return 1 "Gishki" Ritual Monster you control to the hand, and if you do, negate the activation, and if you do that, shuffle that card into the Deck.
+    You can Ritual Summon this card with any "Gishki" Ritual Spell. If this card is Ritual Summoned: You can target 1 WATER monster in your GY; Special Summon it. Cannot be destroyed by battle with a monster Special Summoned from the Extra Deck. Once per turn, when your opponent activates a monster effect (Quick Effect): You can return 1 "Gishki" Ritual Monster you control to the hand, and if you do, negate the activation, and if you do that, shuffle it into the Deck.
   de:
   es:
   fr:
@@ -41,8 +41,28 @@ series:
 - Gishki
 images:
 - index: 1
-  image: EvigishkiNereimanas-PHHY-JP-UR.png
+  image: EvigishkiNeremanas-PHHY-JP-UR.png
 sets:
+  en:
+  - set_number: PHHY-EN032
+    set_name: Photon Hypernova
+    rarities:
+  de:
+  - set_number: PHHY-DE032
+    set_name: Photon Hypernova
+    rarities:
+  fr:
+  - set_number: PHHY-FR032
+    set_name: Photon Hypernova
+    rarities:
+  it:
+  - set_number: PHHY-IT032
+    set_name: Photon Hypernova
+    rarities:
+  pt:
+  - set_number: PHHY-PT032
+    set_name: Photon Hypernova
+    rarities:
   ja:
   - set_number: PHHY-JP032
     set_name: Photon Hypernova
@@ -52,6 +72,19 @@ sets:
     - Secret Rare
     - Prismatic Secret Rare
   - set_number: PHHY-JP032
+    set_name: Photon Hypernova +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Prismatic Secret Rare
+  ko:
+  - set_number: PHHY-KR032
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Prismatic Secret Rare
+  - set_number: PHHY-KR032
     set_name: Photon Hypernova +1 Bonus Pack
     rarities:
     - Ultra Rare
