--- a/data/cards/92714517.yaml
+++ b/data/cards/92714517.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 拉比林斯迷宫欢迎欢迎大欢迎
 text:
   en: |-
-    Special Summon 1 "Labrynth" monster from your hand, Deck, or GY, then return 1 monster you control to the hand. You can banish this card from your GY, then target 1 Fiend monster you control, or, if you control a Level 8 or higher Fiend monster, you can target 1 card your opponent controls instead; return it to the hand. You can only use 1 "Big Welcome Labrynth" effect per turn, and only once that turn.
+    Special Summon 1 "Labrynth" monster from your hand, Deck, or GY, then return 1 monster you control to the hand. You can banish this card from your GY, then target 1 Fiend monster you control, or, if you control a Level 8 or higher Fiend monster, you can target 1 card your opponent controls instead; return that card to the hand. You can only use 1 "Big Welcome Labrynth" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -39,8 +39,38 @@ images:
 - index: 1
   image: BigWelcomeLabrynth-PHHY-JP-R.png
 sets:
+  en:
+  - set_number: PHHY-EN077
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: PHHY-DE077
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: PHHY-FR077
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: PHHY-IT077
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: PHHY-PT077
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PHHY-JP077
+    set_name: Photon Hypernova
+    rarities:
+    - Rare
+  ko:
+  - set_number: PHHY-KR077
     set_name: Photon Hypernova
     rarities:
     - Rare
