--- a/data/cards/07436169.yaml
+++ b/data/cards/07436169.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 三步业
 text:
   en: |-
-    Target 1 "Visas Starfrost" you control and 1 Effect Monster your opponent controls; negate that opponent's monster's effects, and if you do, your monster gains ATK equal to half of that opponent's monster's original ATK or DEF (whichever is higher, your choice if tied). You can banish this card from your GY; add 1 Spell/Trap that mentions "Visas Starfrost" from your Deck to your hand, except "Trivikarma". You can only use 1 "Trivikarma" effect per turn, and only once that turn.
+    Target 1 "Visas Starfrost" in your Monster Zone and 1 Effect Monster your opponent controls; negate that opponent's monster's effects, and if you do, your targeted monster gains ATK equal to half the original ATK or DEF of that monster (whichever is higher). You can banish this card from your GY; add 1 Spell/Trap that mentions "Visas Starfrost" from your Deck to your hand, except "Trivikarma". You can only use 1 "Trivikarma" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -36,8 +36,38 @@ images:
 - index: 1
   image: Trivikarma-PHHY-JP-C.png
 sets:
+  en:
+  - set_number: PHHY-EN074
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: PHHY-DE074
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: PHHY-FR074
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: PHHY-IT074
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: PHHY-PT074
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PHHY-JP074
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  ko:
+  - set_number: PHHY-KR074
     set_name: Photon Hypernova
     rarities:
     - Common
