--- a/data/cards/27134209.yaml
+++ b/data/cards/27134209.yaml
@@ -1,7 +1,7 @@
 konami_id: 18166
 password: 27134209
 name:
-  en: Tree Crown Armorperor Beagram
+  en: Beargram, Shelled Emperor of the Forest Crown
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 树冠之甲帝 比亚格拉姆
 text:
   en: |-
-    Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand or GY) by banishing 3 Insect and/or Plant monsters from your hand and/or GY. You can only Special Summon "Tree Crown Armorperor Beagram(s)" once per turn. Your opponent cannot activate monster effects in response to the activation of your Spell/Trap Cards and effects. Once per turn: You can destroy all face-up monsters on the field, except Insect and Plant monsters, also this card cannot attack directly this turn.
+    Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand or GY) by banishing 3 Insect and/or Plant monsters from your hand and/or GY. You can only Special Summon "Beargram, Shelled Emperor of the Forest Crown" once per turn. Your opponent cannot activate monster effects in response to your Spell/Trap Card or effect activation. Once per turn, during your Main Phase: You can destroy all face-up monsters on the field, except Insect and Plant monsters, also this card cannot attack directly for the rest of this turn.
   de:
   es:
   fr:
@@ -38,8 +38,33 @@ atk: 3400
 def: 2800
 images:
 - index: 1
-  image: TreeCrownArmorperorBeagram-PHHY-JP-UR.png
+  image: BeargramShelledEmperoroftheForestCrown-PHHY-JP-UR.png
 sets:
+  en:
+  - set_number: PHHY-EN021
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: PHHY-DE021
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: PHHY-FR021
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: PHHY-IT021
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: PHHY-PT021
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PHHY-JP021
     set_name: Photon Hypernova
@@ -58,6 +83,20 @@ sets:
     set_name: Secret Utility Box
     rarities:
     - Secret Rare
+  ko:
+  - set_number: PHHY-KR021
+    set_name: Photon Hypernova
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Prismatic Secret Rare
+    - Holographic Rare
+  - set_number: PHHY-KR021
+    set_name: Photon Hypernova +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
