--- a/data/cards/35569555.yaml
+++ b/data/cards/35569555.yaml
@@ -1,7 +1,7 @@
 konami_id: 18200
 password: 35569555
 name:
-  en: Dogmatikatrix
+  en: Dogmatikamatrix
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 凶导的圣告
 text:
   en: |-
-    When this card is activated: You can add 1 "Dogmatika" Ritual Monster or 1 "Dogmatika" Ritual Spell from your Deck to your hand, then, if your opponent controls a monster, you can add 1 "Dogmatika" card from your Deck to your hand. Once per turn, if you control a "Dogmatika" Ritual Monster: You can look at either player's Extra Deck, and send 1 monster from it to the GY. You can only activate 1 "Dogmatikatrix" per turn.
+    When this card is activated: You can add 1 "Dogmatika" Ritual Monster or 1 "Dogmatika" Ritual Spell from your Deck to your hand, then if your opponent controls a monster, you can add 1 "Dogmatika" card from your Deck to your hand. Once per turn, if you control a "Dogmatika" Ritual Monster: You can look at either player's Extra Deck, and send 1 monster from it to the GY. You can only activate 1 "Dogmatikamatrix" per turn.
   de:
   es:
   fr:
@@ -38,10 +38,35 @@ series:
 - Dogmatika
 images:
 - index: 1
-  image: Dogmatikatrix-PHHY-JP-C.png
+  image: Dogmatikamatrix-PHHY-JP-C.png
 sets:
+  en:
+  - set_number: PHHY-EN055
+    set_name: Photon Hypernova
+    rarities:
+  de:
+  - set_number: PHHY-DE055
+    set_name: Photon Hypernova
+    rarities:
+  fr:
+  - set_number: PHHY-FR055
+    set_name: Photon Hypernova
+    rarities:
+  it:
+  - set_number: PHHY-IT055
+    set_name: Photon Hypernova
+    rarities:
+  pt:
+  - set_number: PHHY-PT055
+    set_name: Photon Hypernova
+    rarities:
   ja:
   - set_number: PHHY-JP055
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  ko:
+  - set_number: PHHY-KR055
     set_name: Photon Hypernova
     rarities:
     - Common
