--- a/data/cards/51522296.yaml
+++ b/data/cards/51522296.yaml
@@ -1,7 +1,7 @@
 konami_id: 18176
 password: 51522296
 name:
-  en: White Zoa of Dogmatika
+  en: Dogmatika Alba Zoa
   de:
   es:
   fr:
@@ -15,10 +15,10 @@ name:
   zh-CN: 凶导的白天底
 text:
   en: |-
-    You can Ritual Summon this card with "Dogmatikalamity". Cannot be Ritual Summoned, except with a "Dogmatika" card's effect. "Dogmatika" monsters you control are unaffected by your opponent's activated Fusion, Synchro, Xyz, and Link Monsters' effects. During your Main Phase: You can make your opponent choose 1 of these effects.
-    ● Send 1 card from their hand and/or Extra Deck to the GY for every 2 cards in their Extra Deck (their choice).
-    ● Return all Fusion, Synchro, Xyz, and Link Monsters they control to the Extra Deck.
-    You can only use this effect of "White Zoa of Dogmatika" once per turn.
+    Cannot be Ritual Summoned, except by "Dogmatikalamity" or another "Dogmatika" card effect. "Dogmatika" monsters you control are unaffected by the activated effects of your opponent's Fusion, Synchro, Xyz, and Link Monsters. During your Main Phase: You can make your opponent choose and apply 1 of these effects ('you' in these effects means that opponent).
+    ● For every 2 cards in your Extra Deck, send 1 card from your hand or Extra Deck to the GY.
+    ● Return all Fusion, Synchro, Xyz, and Link Monsters you control to the Extra Deck.
+    You can only use this effect of "Dogmatika Alba Zoa" once per turn.
   de:
   es:
   fr:
@@ -46,20 +46,52 @@ series:
 - Dogmatika
 images:
 - index: 1
-  image: WhiteZoaofDogmatika-PHHY-JP-SR.png
+  image: DogmatikaAlbaZoa-PHHY-JP-SR.png
 sets:
+  en:
+  - set_number: PHHY-EN031
+    set_name: Photon Hypernova
+    rarities:
+  de:
+  - set_number: PHHY-DE031
+    set_name: Photon Hypernova
+    rarities:
+  fr:
+  - set_number: PHHY-FR031
+    set_name: Photon Hypernova
+    rarities:
+  it:
+  - set_number: PHHY-IT031
+    set_name: Photon Hypernova
+    rarities:
+  pt:
+  - set_number: PHHY-PT031
+    set_name: Photon Hypernova
+    rarities:
   ja:
   - set_number: PHHY-JP031
     set_name: Photon Hypernova
     rarities:
-    - SR
-    - ScR
-    - PScR
+    - Super Rare
+    - Secret Rare
+    - Prismatic Secret Rare
   - set_number: PHHY-JP031
     set_name: Photon Hypernova +1 Bonus Pack
     rarities:
-    - SR
-    - PScR
+    - Super Rare
+    - Prismatic Secret Rare
+  ko:
+  - set_number: PHHY-KR031
+    set_name: Photon Hypernova
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Prismatic Secret Rare
+  - set_number: PHHY-KR031
+    set_name: Photon Hypernova +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
