--- a/data/cards/46986414.yaml
+++ b/data/cards/46986414.yaml
@@ -212,6 +212,10 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: ADC1-EN001
+    set_name: Adidas collaboration card
+    rarities:
+    - Secret Rare
   - set_number: LOB-005
     set_name: Legend of Blue Eyes White Dragon
     rarities:
