--- a/data/cards/yugipedia913482.yaml
+++ b/data/cards/yugipedia913482.yaml
@@ -42,41 +42,46 @@ sets:
     set_name: Photon Hypernova Premiere! promotional card
     rarities:
     - Ultra Rare
-  - set_number: PHHY-EN0??
+  - set_number: PHHY-EN086
     set_name: Photon Hypernova
     rarities:
+    - Secret Rare
   de:
   - set_number: PHHY-DESP1
     set_name: Photon Hypernova Premiere! promotional card
     rarities:
     - Ultra Rare
-  - set_number: PHHY-DE0??
+  - set_number: PHHY-DE086
     set_name: Photon Hypernova
     rarities:
+    - Secret Rare
   fr:
   - set_number: PHHY-FRSP1
     set_name: Photon Hypernova Premiere! promotional card
     rarities:
     - Ultra Rare
-  - set_number: PHHY-FR0??
+  - set_number: PHHY-FR0?86
     set_name: Photon Hypernova
     rarities:
+    - Secret Rare
   it:
   - set_number: PHHY-ITSP1
     set_name: Photon Hypernova Premiere! promotional card
     rarities:
     - Ultra Rare
-  - set_number: PHHY-IT0??
+  - set_number: PHHY-IT086
     set_name: Photon Hypernova
     rarities:
+    - Secret Rare
   pt:
   - set_number: PHHY-PTSP1
     set_name: Photon Hypernova Premiere! promotional card
     rarities:
     - Ultra Rare
-  - set_number: PHHY-PT0??
+  - set_number: PHHY-PT086
     set_name: Photon Hypernova
     rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
