--- a/data/cards/70821187.yaml
+++ b/data/cards/70821187.yaml
@@ -8,7 +8,7 @@ name:
   it: Mummia Rigenerante
   pt: Múmia Regenerativa
   ja: <ruby>再<rt>さい</rt></ruby><ruby>生<rt>せい</rt></ruby>ミイラ
-  ja_romaji: Saisei Mīra
+  ja_romaji: Saisei Miira
   ko: 재생 미라
   ko_rr:
   zh-TW:
