--- a/data/cards/03806388.yaml
+++ b/data/cards/03806388.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 混沌核
 text:
   en: |-
-    Cannot be Normal Summoned/Set. Must be Special Summoned by a card effect. If this face-up card would leave the field, banish it instead. You can only use each of the following effects of "Core of Chaos" once per turn. You can banish 1 DARK monster from your hand or GY; Special Summon this card from your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except LIGHT and DARK Synchro Monsters. If this card is Special Summoned: You can target 1 of your banished "Shell of Chaos"; Special Summon it.
+    Cannot be Normal Summoned/Set. Must be Special Summoned by card effect. If this face-up card would leave the field, banish it instead. You can only use each of the following effects of "Core of Chaos" once per turn. You can banish 1 DARK monster from your hand or GY; Special Summon this card from your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except LIGHT or DARK Synchro Monsters. If this card is Special Summoned: You can target 1 of your banished "Shell of Chaos"; Special Summon it.
   de:
   es:
   fr:
@@ -43,8 +43,38 @@ images:
 - index: 1
   image: CoreofChaos-PHHY-JP-C.png
 sets:
+  en:
+  - set_number: PHHY-EN011
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  de:
+  - set_number: PHHY-DE011
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  fr:
+  - set_number: PHHY-FR011
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  it:
+  - set_number: PHHY-IT011
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  pt:
+  - set_number: PHHY-PT011
+    set_name: Photon Hypernova
+    rarities:
+    - Common
   ja:
   - set_number: PHHY-JP011
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  ko:
+  - set_number: PHHY-KR011
     set_name: Photon Hypernova
     rarities:
     - Common
