--- a/data/cards/12527118.yaml
+++ b/data/cards/12527118.yaml
@@ -37,6 +37,31 @@ images:
 - index: 1
   image: Cassimolar-VJMP-JP-UR.png
 sets:
+  en:
+  - set_number: PHHY-EN093
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  de:
+  - set_number: PHHY-DE093
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  fr:
+  - set_number: PHHY-FR093
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  it:
+  - set_number: PHHY-IT093
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  pt:
+  - set_number: PHHY-PT093
+    set_name: Photon Hypernova
+    rarities:
+    - Common
   ja:
   - set_number: VJMP-JP214
     set_name: V Jump Spring 2022 subscription bonus
