--- a/data/cards/46261704.yaml
+++ b/data/cards/46261704.yaml
@@ -1,7 +1,7 @@
 konami_id: 18148
 password: 46261704
 name:
-  en: Galaktikuriboh
+  en: Galactikuriboh
   de:
   es:
   fr:
@@ -41,7 +41,7 @@ series:
 - Kuriboh
 images:
 - index: 1
-  image: Galaktikuriboh-PHHY-JP-C.png
+  image: Galactikuriboh-PHHY-JP-C.png
 sets:
   ja:
   - set_number: PHHY-JP003
