--- a/data/cards/33503878.yaml
+++ b/data/cards/33503878.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 魔界台本「戏剧性故事」
 text:
   en: |-
-    Target 1 "Abyss Actor" Pendulum Monster you control; Special Summon 1 "Abyss Actor" Pendulum Monster with a different name from your Deck, then either place the targeted monster in your Pendulum Zone or destroy it. If this Set card in its owner's control is destroyed by an opponent's card effect, and you have a face-up "Abyss Actor" Pendulum Monster in your Extra Deck: You can return up to 2 cards on the field to the hand. You can only activate 1 "Abyss Script - Dramatic Story" per turn.
+    Target 1 "Abyss Actor" Pendulum Monster you control; Special Summon 1 "Abyss Actor" monster from your Deck with a different name, then place the targeted monster in your Pendulum Zone or destroy it. If this Set card in its owner's control is destroyed by an opponent's card effect, and you have a face-up "Abyss Actor" Pendulum Monster in your Extra Deck: You can return up to 2 cards on the field to the hand. You can only activate 1 "Abyss Script - Dramatic Story" per turn.
   de:
   es:
   fr:
@@ -38,8 +38,38 @@ images:
 - index: 1
   image: AbyssScriptDramaticStory-PHHY-JP-C.png
 sets:
+  en:
+  - set_number: PHHY-EN064
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  de:
+  - set_number: PHHY-DE064
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  fr:
+  - set_number: PHHY-FR064
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  it:
+  - set_number: PHHY-IT064
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  pt:
+  - set_number: PHHY-PT064
+    set_name: Photon Hypernova
+    rarities:
+    - Common
   ja:
   - set_number: PHHY-JP064
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  ko:
+  - set_number: PHHY-KR064
     set_name: Photon Hypernova
     rarities:
     - Common
