--- a/data/cards/65351555.yaml
+++ b/data/cards/65351555.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 咒眼之眷属 巴西利科克
 text:
   en: |-
-    If this card is in your hand or GY, and you control an "Evil Eye" monster (Quick Effect): You can Special Summon this card, but banish it when it leaves the field. During your opponent's turn, you can (Quick Effect): Immediately after this effect resolves, Link Summon 1 "Evil Eye" monster using materials you control. When you do, you can treat "Evil Eye" Equip Spells you control as "Evil Eye" monsters and use them as material. You can only use each effect of "Basiltrice, Familiar of the Evil Eye" once per turn.
+    If you control an "Evil Eye" monster and this card is in your hand or GY (Quick Effect): You can Special Summon this card, but banish it when it leaves the field. During your opponent's turn, you can (Quick Effect): Immediately after this effect resolves, Link Summon 1 "Evil Eye" Link Monster using monsters you control as material. When you do, you can also use "Evil Eye" Equip Spells you control as "Evil Eye" monsters. You can only use each effect of "Basiltrice, Familiar of the Evil Eye" once per turn.
   de:
   es:
   fr:
@@ -42,8 +42,38 @@ images:
 - index: 1
   image: BasiltriceFamiliaroftheEvilEye-PHHY-JP-C.png
 sets:
+  en:
+  - set_number: PHHY-EN019
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  de:
+  - set_number: PHHY-DE019
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  fr:
+  - set_number: PHHY-FR019
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  it:
+  - set_number: PHHY-IT019
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  pt:
+  - set_number: PHHY-PT019
+    set_name: Photon Hypernova
+    rarities:
+    - Common
   ja:
   - set_number: PHHY-JP019
+    set_name: Photon Hypernova
+    rarities:
+    - Common
+  ko:
+  - set_number: PHHY-KR019
     set_name: Photon Hypernova
     rarities:
     - Common
